# madewithml

./: .gitignore  README.md  pyproject.toml
notebook/: ray.ipynb
src/madewithml/: __init__.py
