[project]
name = "madewithml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "UponTheSky", email = "sailing.to.orbis@gmail.com" }
]
dependencies = [
    "ray>=2.24.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.4",
    "ipywidgets>=8.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/madewithml"]
